# messeger-servers

./: README.md  Start.sh  ad  messeger-servers.sln  shutdown.sh
Lessons/: Lesson-2-classes.txt  Lesson-2.txt
Lessons/Class-lesson/: Class-lesson.csproj  Class-lesson.sln  Program.cs
Practice/: Program.cs
Practice/Properties/: launchSettings.json
river/: BackendEndpoints.cs  FrontEndEndpoints.cs  Msgindex.html  Program.cs  index.html  test.txt
river/Properties/: launchSettings.json
seb/: BackEndpoints.cs  Cargo.toml  Program.cs  index.html  seb.http
seb/Properties/: launchSettings.json
seb/src/: main.rs
src/: river.sh  seb.sh
