[package]
name = "seb"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { git = "https://github.com/tokio-rs/axum.git", branch = "v0.8.x" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
